--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name" : "sirikkoster/pokemon-data.json",
+    "name" : "sirikkoster/pokemon-data-json",
     "description" : "Data for Pokemon",
     "keywords" : [
         "pokemon",
